force-app/main/default/objects/App_Store_Item__mdt/App_Store_Item__mdt.object-meta.xml
<CustomObject>
    <label>App Store Item</label>
    <pluralLabel>App Store Items</pluralLabel>
</CustomObject>