force-app/main/default/objects/App_Store_Item__mdt/fields/App_Icon__c.field-meta.xml
<CustomField>
    <fullName>App_Icon__c</fullName>
    <label>App Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>