force-app/main/default/objects/App_Store_Item__mdt/fields/App_Store__c.field-meta.xml
<CustomField>
    <fullName>App_Store__c</fullName>
    <label>App Store</label>
    <referenceTo>App_Store__mdt</referenceTo>
    <relationshipLabel>App Store Items</relationshipLabel>
    <relationshipName>App_Store_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>