force-app/main/default/objects/App_Store_Item__mdt/fields/LWC_Component__c.field-meta.xml
<CustomField>
    <fullName>LWC_Component__c</fullName>
    <label>LWC Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>