force-app/main/default/objects/App_Store_Item__mdt/fields/Website_Url__c.field-meta.xml
<CustomField>
    <fullName>Website_Url__c</fullName>
    <label>Website Url</label>
    <type>Url</type>
</CustomField>